# ScoreCount-Flask

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
src/: __init__.py  form.py
src/monitor/: __init__.py  login.py
src/student/: __init__.py  login.py
src/utils/: __init__.py  util.py
static/js/: scripts.js
templates/: admin_login.html  index.html  management.html  score_form.html  student_login.html
