[tool.poetry]
name = "scorecount-flask"
version = "0.1.0"
description = ""
authors = ["FoxSuzuran <2903582631@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.3"
flask-wtf = "^1.1.1"
loguru = "^0.7.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
